--- a/_includes/lesson_footer.html
+++ b/_includes/lesson_footer.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-md-6 license" id="license-info" align="left">
 	{% if site.carpentry == "swc" %}
-    Content licensed under <a href="{{ site.cc_by_human }}">CC-BY 4.0</a> 2020–{{ 'now' | date: "%Y" }}
+    Licensed under <a href="{{ site.cc_by_human }}">CC-BY 4.0</a> 2020–{{ 'now' | date: "%Y" }}
 	by the <a href="{{ site.cms_site }}">CMS</a> Collaborations at <a href="{{ site.cern_site }}">CERN</a>
 	Licensed under <a href="{{ site.cc_by_human }}">CC-BY 4.0</a> 2018–{{ 'now' | date: "%Y" }}
 	by <a href="{{ site.carpentries_site }}">The Carpentries</a>
